# tmdb-easy

./: .gitignore  Cargo.toml
tmdb-easy/: Cargo.toml
tmdb-easy-raw/: Cargo.toml  build.rs  schema.rs  tmdb-api.json
tmdb-easy-raw/src/: lib.rs
tmdb-easy/src/: client.rs  error.rs  lib.rs  movie.rs  search.rs  tv.rs
tmdb-easy/src/search/: movie.rs  tv_show.rs
