[package]
name = "tmdb-easy-raw"
version = "0.1.0"
edition = "2024"

[features]
default = ["vendored"]
vendored = []
blocking = []
async = []

[dependencies]
reqwest = { version = "0.13.1", features = ["blocking", "json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }

[build-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
convert_case = "0.10.0"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
